# pybind11Understanding

./: .gitignore  CMakeLists.txt  ReadME.md  pyproject.toml
.github/workflows/: cmake.yml  python.yml
pybind/: CMakeLists.txt  doubleEmbed.cxx  doubleEmbedMPI.cxx  doubleEmbedOMP.cxx  mypylib.cpp  mypylibEmbedded.cpp  setup.py
pybindmodule/: CMakeLists.txt  callEmbed.cpp  mypylib.cpp  pyproject.toml
src/: CMakeLists.txt  mylib.cpp  mylib.hpp
test/: CMakeLists.txt  baselibtest.cpp  passByReference.cpp  pylibtest.cpp  pylibtest.py  test_foolish.py  test_myLib.py
